# la-rosquera-app

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: App.js  package-lock.json  package.json
frontend/screens/: HomeScreen.js  RoscoScreen.js
