[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FelicitasKlix <felikpc@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"